--- a/Caso3_jd.ahumada10_r.garcia11/.recommenders/caches/identified-project-coordinates.json
+++ b/Caso3_jd.ahumada10_r.garcia11/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_101","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"D:\\Users\\Rogelio Garcia\\Documents\\U\\2017-I\\Infracomp\\Caso3\\Caso3_jd.ahumada10_r.garcia11\\ClienteSeguro","type":"PROJECT","hints":{"PROJECT_NAME":"ClienteSeguro"}},"caso2_jd.ahumada10_r.garcia11:caso2_jd.ahumada10_r.garcia11:0.0.1"]]
